# homework

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  homework.py  pyproject.toml  setup.py  testfile.py
homework/: __init__.py  cli.py  homework.py
src/homework/: cli.py  parser.py  prepare.py
tests/: test_parser.py  test_prepare.py
tests/data/: sample_0.py  sample_0_homework.py  sample_1.py  sample_1_homework.py  sample_2.py  sample_2_homework.py  sample_3.tf  sample_3_homework.tf  sample_4.cfg  sample_4_homework.cfg  sample_5.conf  sample_5_homework.conf  sample_6.yaml  sample_6_homework.yaml
