[project]
name = "homework"
version = "1.1.0"
description = "A package to create programming assignments"
readme = "README.md"
authors = [
  { name = "Sebastian Rodriguez Colina", email = "srcolinas@gmail.com" },
]
maintainers = [
  { name = "Sebastian Rodriguez Colina", email = "srcolinas@gmail.com" },
]
license = { text = "MIT" }
keywords = ["homework", "assignments"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["mypy>=1.14.1", "pytest>=8.3.4", "ruff>=0.9.2"]

[project.scripts]
homework = "homework.cli:main"

[project.urls]
Homepage = "https://github.com/srcolinas/homework"

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-exclude = ["tests/data"]
