[project]
name = "homework"
version = "1.1.0"
description = "A package to create programming assignments"
readme = "README.md"
authors = [
  { name = "Sebastian Rodriguez Colina", email = "srcolinas@gmail.com" },
]
maintainers = [
  { name = "Sebastian Rodriguez Colina", email = "srcolinas@gmail.com" },
]
license = { text = "MIT" }
keywords = ["homework", "assignments"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["mypy>=1.14.1", "pytest>=8.3.4", "ruff>=0.9.2"]

[project.scripts]
homework = "homework.cli:main"

[project.urls]
Homepage = "https://github.com/srcolinas/homework"

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-exclude = ["tests/data"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# Enable flake8-bugbear
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = "tests/data/"
